# poetry-search

./: CMakeLists.txt  LICENSE  README.md
include/: cond_parser.h  database.h  executor.h  matcher.h  restring.h
include/kernel/: llvm_header.h
resource/: poetry_search.cp312-win_amd64.pyd
scripts/: process_hanzi.py
src/: cond_parser.cpp  database.cpp  hanzi_info.cpp  python_apis.cpp  restring.cpp
